Se organizaron carpetas y se corrigieron errores de login

--- a/src/app/components/calendar/calendar.component.scss
+++ b/src/app/components/calendar/calendar.component.scss
@@ -1,4 +1,4 @@
-@use '../../calendar/variables' as *;
+@use '../../../calendar/variables' as *;
 @import "~bootstrap-icons/font/bootstrap-icons.css";
 
 $custom-calendar-theme: calendar-theme(
