--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -13,28 +13,20 @@
     <div class="container pt-lg-md">
       <div class="row justify-content-center">
         <div class="col-lg-5">
-          <!--
-          <div class="alert alert-danger alert-dismissible fade show" role="alert" *ngIf="errorMessage">
-            <span class="alert-inner--text"><strong>{{ errorMessage }}</strong></span>
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="close(alert)">
-              <span aria-hidden="true">×</span>
-            </button>
-          </div>
-          -->
-          <ngb-alert class="alert alert-danger alert-dismissible fade show" role="alert" *ngIf="errorMessage">
+          <ngb-alert class="alert alert-danger alert-dismissible fade show" role="alert" *ngIf="errorMessage != ''">
             <span class="alert-inner--text"><strong>{{ errorMessage }}</strong></span>
             <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="close(alert)">
               <!-- <span aria-hidden="true">&times;</span> -->
             </button>
           </ngb-alert>
           <div class="card bg-secondary shadow border-0">
-            <!--
+            <!--  
             <div class="card-header bg-white pb-5">
               <div class="text-muted text-center mb-3">
-                <small>Sign in with</small>
+                <small>Sign up with</small>
               </div>
-              <div class="btn-wrapper text-center">
-                <a href="javascript:void(0)" class="btn btn-neutral btn-icon">
+              <div class="text-center">
+                <a href="javascript:void(0)" class="btn btn-neutral btn-icon mr-4">
                   <span class="btn-inner--icon">
                     <img src="./assets/img/icons/common/github.svg">
                   </span>
@@ -48,10 +40,10 @@
                 </a>
               </div>
             </div>
-            -->
+          -->
             <div class="card-body px-lg-5 py-lg-5">
               <div class="text-center text-muted mb-4">
-                <h1 class="h3 mb-3 font-weight-normal">Iniciar sesión</h1>
+                <h1 class="h3 mb-3 font-weight-normal">Registrarse</h1>
               </div>
               <hr>
               <form [formGroup]="loginForm.baseForm" class="form">
@@ -59,7 +51,14 @@
                   <input class="form-control" text="text" formControlName="mail" matInput placeholder="Email"
                     required />
                   <mat-error *ngIf="checkField('mail')">
-                    {{ loginForm.errorMessage }}
+                    {{ loginForm.errorMessageMail }}
+                  </mat-error>
+                </mat-form-field>
+                <mat-form-field class="full-width-input">
+                  <input class="form-control" text="text" formControlName="name" matInput placeholder="Nombre"
+                    required />
+                  <mat-error *ngIf="checkField('name')">
+                    {{ loginForm.errorMessageName }}
                   </mat-error>
                 </mat-form-field>
                 <mat-form-field class="full-width-input">
@@ -74,36 +73,28 @@
                     {{ loginForm.errorMessage }}
                   </mat-error>
                 </mat-form-field>
-                <div class="custom-control custom-control-alternative custom-checkbox">
-                  <input class="custom-control-input" id=" customCheckLogin" type="checkbox">
-                  <label class="custom-control-label" for=" customCheckLogin">
-                    <span>Recordarme</span>
-                  </label>
-                </div>
+                <!--<div class="row my-4">
+                  <div class="col-12">
+                    <div class="custom-control custom-control-alternative custom-checkbox">
+                      <input class="custom-control-input" id="customCheckRegister" type="checkbox">
+                      <label class="custom-control-label" for="customCheckRegister">
+                        <span>Estoy de acuerdo con las
+                          <a href="javascript:void(0)">Políticas de privacidad</a>
+                        </span>
+                      </label>
+                    </div>
+                  </div>
+                </div>-->
                 <div class="text-center">
                   <button [disabled]="loginForm.baseForm.invalid" type="button"
-                    class="btn btn-primary my-4 form-control" (click)="onLogin()">Iniciar sesión</button>
+                    class="btn btn-primary my-4 form-control" (click)="register()">Registrarse</button>
                 </div>
               </form>
               <div class="form-group mb-3 text-center">
-                <a routerLink="/register">¿Aún no tienes una cuenta? Regístrate</a>
+                <a routerLink="/login">¿Ya tienes una cuenta? Inicia sesión</a>
               </div>
             </div>
           </div>
-          <!-- 
-          <div class="row mt-3">
-            <div class="col-6">
-              <a href="javascript:void(0)" class="text-light">
-                <small>Forgot password?</small>
-              </a>
-            </div>
-            <div class="col-6 text-right">
-              <a href="javascript:void(0)" class="text-light">
-                <small>Create new account</small>
-              </a>
-            </div>
-          </div>
-          -->
         </div>
       </div>
     </div>
