--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -55,41 +55,18 @@
               </div><br>
               <div style="color:rgb(255, 255, 255); text-align:center; font-weight: bolder; text-transform:uppercase;">
                 <a (click)="setOpenDetail(rou,1)" class="bdropdown-item" style="color:rgb(255, 255, 255); font-size:170%; text-align:end; text-transform:uppercase;" *ngIf="!getOpenDetail(rou)">
-                  {{rou.nameRoutine}} <i class="bi bi-caret-down-fill"> </i>
+                  {{rou.nameRoutine}} - Dia  {{rou.daySelected}} <i class="bi bi-caret-down-fill"> </i>
                 </a>
                 <a (click)="setOpenDetail(rou,0)" class="bdropdown-item" style="color:rgb(255, 255, 255); font-size:170%; text-align:end; text-transform:uppercase;" *ngIf="getOpenDetail(rou)">
-                  {{rou.nameRoutine}} <i class="bi bi-caret-up-fill"></i>
+                  {{rou.nameRoutine}} - Dia  {{rou.daySelected}} <i class="bi bi-caret-up-fill"></i>
                 </a>
               </div><br>
               <div *ngIf="getOpenDetail(rou)">
                 <div class="row justify-content-center" >
                   <ul class="code-editor-options-menu" *ngFor="let dat of rou.exercises">
                     <div class="card border-light mb-10" [ngClass]="'card-transparent'">
-                      <div class="card-header bg-transparent justify-content-center border-0" 
-                            style="text-transform:uppercase; height:3.5rem; text-align: center; color:rgb(255, 255, 255);font-weight: bolder; font-size:17px;">
-                        {{dat.processExercise.nameExercise}}
-                      </div>
-                      <div class="card-body text-white">
-                        <p class="card-text" style="font-weight:bolder; font-size:15px; text-shadow: 2px 2px 5px rgb(110, 109, 109); height:6rem;">
-                          <i class="ni ni-user-run"></i> <i> 
-                            {{dat.repetitions}} repeticiones 
-                          </i> <br>
-                          <i class="bi bi-arrow-clockwise"> 
-                            {{dat.series}} series 
-                          </i> <br>
-                          <i class="bi bi-trophy"> 
-                          {{dat.processExercise.mainMuscle}}
-                          </i> <br>
-                          <a href="https://www.youtube.com/watch?v=aKHar4U2Iys" target="_blank" style="color:rgb(0, 30, 128)"> 
-                            <i class="bi bi-youtube"> 
-                              Video explicativo
-                            </i>
-                          </a><br>
-                          <i class="bi bi-info-circle"> 
-                            {{dat.processExercise.description}}
-                          </i> 
-                        </p>
-                      </div>
+                      <app-exercise-information-card [exercise]="dat">
+                      </app-exercise-information-card>
                     </div>
                     <br>
                   </ul>
