--- a/src/app/components/my-routine/my-routine.component.html
+++ b/src/app/components/my-routine/my-routine.component.html
@@ -55,83 +55,66 @@
                   </a>
                 </div><br>
                 <div *ngIf="getOpenDetail(rou)">
-                  <div class="row row-grid justify-content-center" >
-                    <ul class="code-editor-options-menu" *ngFor="let dat of rou.exercises">
-                      <div class="card border-light mb-10" [ngClass]="'card-transparent'">
-                        <div class="card-header bg-transparent justify-content-center border-0" 
-                              style="text-transform:uppercase; height:3.5rem; text-align: center; color:rgb(255, 255, 255);font-weight: bolder; font-size:17px;">
-                          {{dat.processExercise.nameExercise}}
-                        </div>
-                        <div class="card-body text-white">
-                          <p class="card-text" style="font-weight:bolder; font-size:15px; text-shadow: 2px 2px 5px rgb(110, 109, 109); height:6rem;">
-                            <i class="ni ni-user-run"></i> <i> 
-                              {{dat.repetitions}} repeticiones 
-                            </i> <br>
-                            <i class="bi bi-arrow-clockwise"> 
-                              {{dat.series}} series 
-                            </i> <br>
-                            <i class="bi bi-trophy"> 
-                            {{dat.processExercise.mainMuscle}}
-                            </i> <br>
-                            <a href="https://www.youtube.com/watch?v=aKHar4U2Iys" target="_blank" style="color:rgb(0, 30, 128)"> 
-                              <i class="bi bi-youtube"> 
-                                Video explicativo
-                              </i>
-                            </a><br>
-                            <i class="bi bi-info-circle"> 
-                              {{dat.processExercise.description}}
-                            </i> 
-                          </p>
-                        </div>
-                      </div>
-                      <div style="text-transform:uppercase; height:5rem; text-align: center;" *ngIf="getPermissionToModify(rou)">
-                        <a href="javascript:void(0)" class="btn btn-primary mt-4" (click)="modifiedExercise(classic, dat)">
-                          <i class="bi bi-pencil"></i> Modificar Ejercicio
-                        </a>
-                      </div>
-                      <ng-template #classic let-c="close" let-d="dismiss">
-                        <div class="modal-content">
-                          <div class="modal-header">
-                            <h6 class="modal-title" id="modal-title-default">
-                              <div style="text-transform:uppercase; font-weight: bold;">
-                              {{dat.processExercise.nameExercise}}
-                              </div>
-                            </h6>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="d('Cross click')">
-                              <span aria-hidden="true">×</span>
-                            </button>
-                          </div>
-                          <div class="modal-body">
-                            <div>
-                              Repeticiones:
-                              <div class="form-group has-success" *ngIf="validationValueRepetitions()">
-                                <input type="text" [(ngModel)]="repetitionsExercise" name="repetitionsExercise" class="form-control" />
-                              </div>
-                              <div class="form-group has-danger" *ngIf="!validationValueRepetitions()">
-                                <input type="text" placeholder="Ingrese un valor mayor a 0 para las repeticiones" [(ngModel)]="repetitionsExercise" name="repetitionsExercise" class="form-control is-invalid"/>
-                              </div>
+                  <mat-tab-group dynamicHeight #tabGroup (selectedTabChange)="tabSelectedRoutine(rou,$event)">
+                    <ul *ngFor="let day of daysRoutine(rou)">
+                      <mat-tab label="Dia {{day}}"> <br>
+                        <div class="row row-grid justify-content-center" >
+                          <ul class="code-editor-options-menu" *ngFor="let dat of exercisesRou(rou,day)">
+                            <div class="card border-light mb-10" [ngClass]="'card-transparent'">
+                              <app-exercise-information-card [exercise]="dat">
+                              </app-exercise-information-card>
                             </div>
-                            <div>
-                              Series:
-                              <div class="form-group has-success" *ngIf="validationValueSeries()">
-                                <input type="text" [(ngModel)]="seriesExercise" name="seriesExercise" class="form-control" />
-                              </div>
-                              <div class="form-group has-danger" *ngIf="!validationValueSeries()">
-                                <input type="text" placeholder="Ingrese un valor mayor a 0 para las series" [(ngModel)]="seriesExercise" name="seriesExercise" class="form-control is-invalid" />
-                              </div>
+                            <div style="text-transform:uppercase; height:5rem; text-align: center;" *ngIf="getPermissionToModify(rou)">
+                              <a href="javascript:void(0)" class="btn btn-primary mt-4" (click)="modifiedExercise(classic, dat)">
+                                <i class="bi bi-pencil"></i> Modificar Ejercicio
+                              </a>
                             </div>
-                          </div>
-                          <div class="modal-footer">
-                            <button type="button" class="btn btn-primary" href="javascript:void(0)" (click)="saveChangesExercise(dat); c('Close click')" [disabled]="enabledChangesExercise()">
-                              Guardar Cambios
-                            </button>
-                            <button type="button" class="btn btn-link  ml-auto" data-dismiss="modal" (click)="c('Close click')">Cancelar</button>
-                          </div>
+                            <ng-template #classic let-c="close" let-d="dismiss">
+                              <div class="modal-content">
+                                <div class="modal-header">
+                                  <h6 class="modal-title" id="modal-title-default">
+                                    <div style="text-transform:uppercase; font-weight: bold;">
+                                    {{dat.processExercise.nameExercise}}
+                                    </div>
+                                  </h6>
+                                  <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="d('Cross click')">
+                                    <span aria-hidden="true">×</span>
+                                  </button>
+                                </div>
+                                <div class="modal-body">
+                                  <div>
+                                    Repeticiones:
+                                    <div class="form-group has-success" *ngIf="validationValueRepetitions()">
+                                      <input type="text" [(ngModel)]="repetitionsExercise" name="repetitionsExercise" class="form-control" />
+                                    </div>
+                                    <div class="form-group has-danger" *ngIf="!validationValueRepetitions()">
+                                      <input type="text" placeholder="Ingrese un valor mayor a 0 para las repeticiones" [(ngModel)]="repetitionsExercise" name="repetitionsExercise" class="form-control is-invalid"/>
+                                    </div>
+                                  </div>
+                                  <div>
+                                    Series:
+                                    <div class="form-group has-success" *ngIf="validationValueSeries()">
+                                      <input type="text" [(ngModel)]="seriesExercise" name="seriesExercise" class="form-control" />
+                                    </div>
+                                    <div class="form-group has-danger" *ngIf="!validationValueSeries()">
+                                      <input type="text" placeholder="Ingrese un valor mayor a 0 para las series" [(ngModel)]="seriesExercise" name="seriesExercise" class="form-control is-invalid" />
+                                    </div>
+                                  </div>
+                                </div>
+                                <div class="modal-footer">
+                                  <button type="button" class="btn btn-primary" href="javascript:void(0)" (click)="saveChangesExercise(dat); c('Close click')" [disabled]="enabledChangesExercise()">
+                                    Guardar Cambios
+                                  </button>
+                                  <button type="button" class="btn btn-link  ml-auto" data-dismiss="modal" (click)="c('Close click')">Cancelar</button>
+                                </div>
+                              </div>
+                            </ng-template>
+                            <br>
+                          </ul>
                         </div>
-                      </ng-template>
-                      <br>
+                      </mat-tab>
                     </ul>
-                  </div>
+                  </mat-tab-group>
                   <div style="text-transform:uppercase; height:5rem; text-align: center;" *ngIf="getPermissionToModify(rou)">
                     <a href="javascript:void(0)" class="btn btn-warning mt-4" (click)="discardChanges(rou)">
                       <i class="bi bi-trash3"></i> Descartar todos los cambios
