--- a/src/app/components/routine-generated/routine-generated.component.html
+++ b/src/app/components/routine-generated/routine-generated.component.html
@@ -13,14 +13,19 @@
             Selecciona ejercicios y crea tu rutina personalizada:
           </h2>
         </div><br>
-        <div style="text-transform:uppercase; height:5rem; text-align: center; color:rgb(255, 255, 255);">
-          <label for="name">Nombre de su nueva rutina: </label> <br>
-          <input type="text" placeholder="Ingrese un nombre" [(ngModel)]="nameNewRoutine" name="nameNewRoutine" required size="60">
-        </div>
         <div class="row">
           <div class="col" style="text-align:center">
             <div ngbDropdown class="d-inline-block">
               <h2 class="display-3 " style="color:rgb(252, 252, 252); font-size:15px; text-align:center;">
+                Nombre de su nueva rutina:
+                <div class="form-group has-success mt-2" *ngIf="validationNameRoutine()">
+                  <input type="string" id="nameNewRoutine"  [(ngModel)]="nameNewRoutine" name="nameNewRoutine" class="form-control" />
+                </div>
+                <div class="form-group has-danger" *ngIf="!validationNameRoutine()">
+                  <input type="string" placeholder="Ingrese el nombre de su nueva rutina" [(ngModel)]="nameNewRoutine" name="nameNewRoutine" class="form-control">
+                </div>
+              </h2>
+              <h2 class="display-3 " style="color:rgb(255, 255, 255); font-size:15px; text-align:center;">
                 Ingrese la cantidad de semanas que quiere realizar la rutina:
                 <div class="form-group has-success mt-2" *ngIf="validationValueWeeks()">
                   <input type="number" id="validationValueWeeks"  [(ngModel)]="weeksRoutine" name="weeksRoutine" class="form-control" />
@@ -30,7 +35,7 @@
                 </div>
                 Seleccione el día de la semana que quiere realizar esta rutina: 
                 <mat-form-field appearance="outline">
-                  <mat-label>Dias seleccionados</mat-label>
+                  <mat-label style="color:rgb(255, 255, 255) !important;" >Dias seleccionados</mat-label>
                   <mat-select [(ngModel)]="daySelectedInRoutine" name="selectedDays" multiple>
                     <mat-option *ngFor="let dia of getValues(weekdays)" [value]="dia" >{{dia}}</mat-option>
                   </mat-select>
@@ -71,31 +76,8 @@
         <div class="row row-grid justify-content-center">
           <ul class="code-editor-options-menu" *ngFor="let dat of allExercise">
             <div class="card border-light mb-10" [ngClass]="exerciseIsSelected(dat)">
-              <div class="card-header bg-transparent justify-content-center border-0" 
-                    style="text-transform:uppercase; height:3.5rem; text-align: center; color:rgb(255, 255, 255);font-weight: bolder; font-size:17px;">
-                {{dat.processExercise.nameExercise}}
-              </div>
-              <div class="card-body text-white">
-                <p class="card-text" style="font-weight:bolder; font-size:15px; text-shadow: 2px 2px 5px rgb(110, 109, 109); height:6rem;">
-                  <i class="ni ni-user-run"></i> <i> 
-                    {{dat.repetitions}} repeticiones 
-                  </i> <br>
-                  <i class="bi bi-arrow-clockwise"> 
-                    {{dat.series}} series 
-                  </i> <br>
-                  <i class="bi bi-trophy"> 
-                  {{dat.processExercise.mainMuscle}}
-                  </i> <br>
-                  <a href="https://www.youtube.com/watch?v=aKHar4U2Iys" target="_blank" style="color:rgb(0, 30, 128)"> 
-                    <i class="bi bi-youtube"> 
-                      Video explicativo
-                    </i>
-                  </a><br>
-                  <i class="bi bi-info-circle"> 
-                    {{dat.processExercise.description}}
-                  </i> 
-                </p>
-              </div>
+              <app-exercise-information-card [exercise]="dat">
+              </app-exercise-information-card>
               <div class="card-footer bg-transparent border-0">
                 <div *ngIf="isSelected(dat)" >
                   <a href="javascript:void(0)" (click)="addExerciseToRoutine(dat)"  class="btn btn-link btn-block">
