--- a/src/app/components/routine/routine.component.html
+++ b/src/app/components/routine/routine.component.html
@@ -17,8 +17,8 @@
         <span></span>
       </div>
       <div class="col-sm-9">
-        <h2 class="display-3 mb-0"  style="color:rgb(255, 255, 255); font-size:30px; text-align:center; font-weight: bolder;">
-          Elige una rutina según tu nivel:
+        <h2 class="display-3 mb-0" style="color:rgb(255, 255, 255); font-size:25px; text-align:center; font-weight: bolder;">
+          Elige tu nivel, para ver las diferentes rutinas:
         </h2>
       </div>
       <!-- SVG separator -->
@@ -35,40 +35,34 @@
         <div class="col-lg-12">
           <div class="row row-grid">
             <div class="col-lg-4">
-              <div class="card card-lift--hover shadow border-0">
-                <div class="card-body py-5">
-                  <div class="icon icon-shape icon-shape-primary rounded-circle mb-4">
-                    <i class="ni ni-user-run"></i>
-                  </div>
-                  <h6 class="text-primary">Nivel Principiante</h6>
-                  <p class="description mt-3">Para personas que inician este sistema de entrenamiento. Rutinas con ejercicios simples donde trabajaras tus músculos principales.</p>
-                  <a href="javascript:void(0)" (click)="getRoutinesWithLevel('1','Rutinas de Nivel Principiante:')" class="btn btn-primary mt-4">Ver Rutinas</a>
-                </div>
-              </div>
+              <app-level-card [nivelName]="'Nivel Principiante'"
+                              [description]="'Para personas que inician este sistema de 
+                                entrenamiento. Rutinas con ejercicios simples donde trabajaras 
+                                tus músculos principales.'"
+                              [icon]="'ni ni-user-run'"
+                              [colorCard]="'primary'"
+                              [level]="'1'">
+              </app-level-card>
             </div>
             <div class="col-lg-4">
-              <div class="card card-lift--hover shadow border-0">
-                <div class="card-body py-5">
-                  <div class="icon icon-shape icon-shape-success rounded-circle mb-4">
-                    <i class="ni ni-diamond"></i>
-                  </div>
-                  <h6 class="text-success">Nivel Intermedio</h6>
-                  <p class="description mt-3">Para personas con una experiencia en entrenamiento de calistenia. Debes tener una base de fuerza y control de peso corporal para este nivel.</p>
-                  <a href="javascript:void(0)" (click)="getRoutinesWithLevel('2', 'Rutinas de Nivel Intermedio:')" class="btn btn-success mt-4">Ver Rutinas</a>
-                </div>
-              </div>
+              <app-level-card [nivelName]="'Nivel Intermedio'"
+                              [description]="'Para personas con una experiencia en 
+                                entrenamiento de calistenia. Debes tener una base de fuerza 
+                                y control de peso corporal para este nivel.'"
+                              [icon]="'ni ni-diamond'"
+                              [colorCard]="'success'"
+                              [level]="'2'">
+              </app-level-card>
             </div>
             <div class="col-lg-4">
-              <div class="card card-lift--hover shadow border-0">
-                <div class="card-body py-5">
-                  <div class="icon icon-shape icon-shape-warning rounded-circle mb-4">
-                    <i class="bi bi-award-fill"></i>
-                  </div>
-                  <h6 class="text-warning">Nivel Avanzado</h6>
-                  <p class="description mt-3">Rutinas con ejercicios complejos, donde potenciaras tus grupos musculares. Para personas con gran experiencia en calistenia, fuerza y control corporal.</p>
-                  <a href="javascript:void(0)" (click)="getRoutinesWithLevel('3', 'Rutinas de Nivel Avanzado:')" class="btn btn-warning mt-4">Ver Rutinas</a>
-                </div>
-              </div>
+              <app-level-card [nivelName]="'Nivel Avanzado'"
+                              [description]="'Rutinas con ejercicios complejos, donde 
+                                potenciaras tus grupos musculares. Para personas con gran 
+                                experiencia en calistenia, fuerza y control corporal.'"
+                              [icon]="'bi bi-award-fill'"
+                              [colorCard]="'warning'"
+                              [level]="'3'">
+              </app-level-card>
             </div>
           </div>
         </div>
@@ -81,42 +75,20 @@
     </div>
     <ul class="code-editor-options-menu" *ngFor="let rou of routinesForLevel">
       <div class="container container rounded">
-        <div [ngClass]="'content-transparent-avanzado'">
+        <div [ngClass]="'content-transparent-avanzado'"> <br>
           <p style=" color:rgb(0, 11, 41); font-size:25px; text-align:center; font-weight: bolder;">
             {{rou.nameRoutine}}
           </p>
-          <mat-tab-group #tabGroup (selectedTabChange)="tabSelectedRoutine(rou,$event)">
+          <mat-tab-group dynamicHeight #tabGroup (selectedTabChange)="tabSelectedRoutine(rou,$event)">
             <ul *ngFor="let day of daysRoutine(rou)">
               <mat-tab label="Dia {{day}}"> <br>
                 <div class="row row-grid justify-content-center">
                   <ul class="code-editor-options-menu" *ngFor="let dat of exercisesRou(rou,day)">
                     <div class="card border-light mb-10" [ngClass]="'card-transparent'">
                       <div class="card-content">
-                        <div class="card-header bg-transparent justify-content-center border-0" 
-                              style="text-transform:uppercase; height:3.5rem; text-align: center; color:rgb(0, 0, 0);font-weight: bolder; font-size:17px;">
-                          {{dat.processExercise.nameExercise}}
-                        </div>
-                        <div class="card-body text-align">
-                          <p class="card-text" style="font-weight:bolder; font-size:15px; text-shadow: 2px 2px 5px rgb(110, 109, 109); height:6rem;">
-                            <i class="ni ni-user-run"></i> <i> 
-                              {{dat.repetitions}} repeticiones 
-                            </i> <br>
-                            <i class="bi bi-arrow-clockwise"> 
-                              {{dat.series}} series 
-                            </i> <br>
-                            <i class="bi bi-trophy"> 
-                            {{dat.processExercise.mainMuscle}}
-                            </i> <br>
-                            <a href="https://www.youtube.com/watch?v=aKHar4U2Iys" target="_blank" style="color:rgb(0, 30, 128)"> 
-                              <i class="bi bi-youtube"> 
-                                Video explicativo
-                              </i>
-                            </a><br>
-                            <i class="bi bi-info-circle"> 
-                              {{dat.processExercise.description}}
-                            </i> 
-                          </p>
-                        </div>
+                        <app-exercise-information-card  [exercise]="dat" 
+                                                        [colorStyle]="'black'">
+                        </app-exercise-information-card>
                       </div> 
                     </div><br>
                   </ul>
