--- a/src/app/components/my-routine/my-routine.component.html
+++ b/src/app/components/my-routine/my-routine.component.html
@@ -46,14 +46,9 @@
                     <span aria-hidden="true">×</span>
                   </button>
                 </div><br>
-                <div style="color:rgb(255, 255, 255); text-align:center; font-weight: bolder; text-transform:uppercase;">
-                  <a (click)="setOpenDetail(rou,1)" class="bdropdown-item" style="color:rgb(255, 255, 255); font-size:170%; text-align:end; text-transform:uppercase;" *ngIf="!getOpenDetail(rou)">
-                    {{rou.nameRoutine}} <i class="bi bi-caret-down-fill"> </i>
-                  </a>
-                  <a (click)="setOpenDetail(rou,0)" class="bdropdown-item" style="color:rgb(255, 255, 255); font-size:170%; text-align:end; text-transform:uppercase;" *ngIf="getOpenDetail(rou)">
-                    {{rou.nameRoutine}} <i class="bi bi-caret-up-fill"></i>
-                  </a>
-                </div><br>
+                <app-title-accordion  [routine]="rou"
+                                      (openDetails)="setOpenDetail(rou, $event)">
+                </app-title-accordion>
                 <div *ngIf="getOpenDetail(rou)">
                   <mat-tab-group dynamicHeight #tabGroup (selectedTabChange)="tabSelectedRoutine(rou,$event)">
                     <ul *ngFor="let day of daysRoutine(rou)">
