Se agregaron test de front

--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -26,7 +26,7 @@
                   <div class="card-body">
                     <form>
                       <article class="sample-column calendar-wrapper">
-                        <igx-calendar #calendar locale="ES" weekstart="1" (selected)="onSelection($event)">
+                        <igx-calendar #calendar locale="ES" weekstart="1" id="calendar" (selected)="onSelection($event)">
                         </igx-calendar>
                       </article>           
                     </form>
