--- a/src/app/components/reusableComponent/title-accordion/title-accordion.component.html
+++ b/src/app/components/reusableComponent/title-accordion/title-accordion.component.html
@@ -1,10 +1,10 @@
 <div style="text-align:center; 
             text-transform:uppercase;font-size:170%;" 
             [ngStyle]="{color: this.colorText}">
-  <a (click)="setOpenDetail(routine,true)" class="bdropdown-item" *ngIf="!getOpenDetail()">
+  <a id="button1" (click)="setOpenDetail(true)" class="bdropdown-item" *ngIf="!routinesOpenDetail">
     {{ routine.nameRoutine }} <i class="bi bi-caret-down-fill"> </i>
   </a>
-  <a (click)="setOpenDetail(routine,false)" class="bdropdown-item" *ngIf="getOpenDetail()">
+  <a id="button2" (click)="setOpenDetail(false)" class="bdropdown-item" *ngIf="routinesOpenDetail">
     {{ routine.nameRoutine }} <i class="bi bi-caret-up-fill"> </i>
   </a>
 </div><br>
