--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -57,15 +57,21 @@
                                     (openDetails)="setOpenDetail(rou, $event)">
               </app-title-accordion>
               <div *ngIf="getOpenDetail(rou)">
-                <div class="row justify-content-center" >
-                  <ul class="code-editor-options-menu" *ngFor="let dat of rou.exercises">
-                    <div class="card border-light mb-10" [ngClass]="'card-transparent'">
-                      <app-exercise-information-card [exercise]="dat">
-                      </app-exercise-information-card>
-                    </div>
-                    <br>
+                <mat-tab-group dynamicHeight #tabGroup (selectedTabChange)="tabSelectedRoutine(rou,$event)">
+                  <ul *ngFor="let day of daysRoutine(rou)">
+                    <mat-tab label="Dia {{day}}"> <br>
+                      <div class="row justify-content-center" >
+                        <ul class="code-editor-options-menu" *ngFor="let dat of exercisesRou(rou,day)">
+                          <div class="card border-light mb-10" [ngClass]="'card-transparent'">
+                            <app-exercise-information-card [exercise]="dat">
+                            </app-exercise-information-card>
+                          </div>
+                          <br>
+                        </ul>
+                      </div>
+                    </mat-tab>
                   </ul>
-                </div>
+                </mat-tab-group>
               </div>
             </div>
           </div>
