add spinner component

--- a/src/app/components/routine/routine.component.html
+++ b/src/app/components/routine/routine.component.html
@@ -1,8 +1,11 @@
 <main>
+  <!--
   <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-scale-multiple">
       <p style="font-size: 20px; color: white">Loading...</p>
   </ngx-spinner>
+  -->
   <div class="position-relative">
+    <app-spinner></app-spinner>
     <section class="section section-lg section-shaped pb-250">
       <div class="shape shape-style-1 shape-primary">
         <span></span>
