--- a/src/app/components/my-routine/my-routine.component.html
+++ b/src/app/components/my-routine/my-routine.component.html
@@ -14,9 +14,12 @@
         <span></span>
       </div>
       <div style="position: relative">
+        <app-spinner></app-spinner>
+        <!-- 
         <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-scale-multiple">
             <p style="font-size: 20px; color: white">Loading...</p>
         </ngx-spinner>
+        -->
         <div class="col-sm-9" *ngIf="haveRoutine()">
           <h2 class="display-3 mb-0"  style="color:rgb(255, 255, 255); font-size:30px; text-align:center; font-weight: bolder;">
             Tus rutinas:
