--- a/src/app/components/calendar/calendar.component.scss
+++ b/src/app/components/calendar/calendar.component.scss
@@ -34,3 +34,7 @@ $custom-calendar-theme: calendar-theme(
     background-color: rgba(255,255,255,0.2);
     font-weight: bolder;
 }
+
+.form-field{
+    text-align:right;
+}
