--- a/src/app/components/my-routine/my-routine.component.css
+++ b/src/app/components/my-routine/my-routine.component.css
@@ -12,3 +12,9 @@
     background-color: rgba(255,255,255,0.2);
     font-weight: bolder;
 }
+
+.terms {
+    display: flex !important;
+    margin: 0 !important;
+}
+  
